--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-asgiref==3.3.1
-Django==3.1.13
-gunicorn==20.0.4
-psycopg2==2.8.6
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+crispy-bootstrap5==0.6
+Django==4.1
+django-crispy-forms==1.14.0
 pytz==2021.1
 sqlparse==0.4.2
+gunicorn==20.0.4
+psycopg2==2.8.6
+
